<resources>
    <string name="app_name">CitizenshipTest</string>
    <string name="titlePart1">AMERICAN GOVERNMENT \nCHÍNH PHỦ HOA KỲ</string>
    <string name="part1A1">Principles of American Democracy</string>
    <string name="part1aVn">Các Nguyên Tắc Của Dân Chủ Hoa Kỳ *** 12 câu hỏi</string>
    <string name="part1A">Principles of American Democracy \n*** \nCác Nguyên Tắc Của Dân Chủ Hoa Kỳ \n*** \n12 Questions</string>
    <string name="part1B">System of Government \n*** \nHệ Thống Của Chính Phủ \n*** \n35 Questions</string>
    <string name="part1B1">System of Government</string>
    <string name="part1B1VN">Hệ Thống Của Chính Phủ *** 35 câu hỏi</string>
    <string name="part1C">Rights and Responsibilities \n*** \nQuyền Hạn và Bổn Phận \n*** \n10 Questions</string>
    <string name="part1C1">Rights and Responsibilities</string>
    <string name="part1C1VN">Quyền Hạn và Bổn Phận *** 10 Questions</string>
    <string name="titlePart2">AMERICAN HISTORY \nLỊCH SỬ HOA KỲ</string>
    <string name="part2A">Colonial Period and Independence \n*** \n Thời kỳ Thuộc Địa và Độc Lập \n*** \n13 Questions</string>
    <string name="part2A1">Colonial Period and Independence</string>
    <string name="part2A1VN">Thời kỳ Thuộc Địa và Độc Lập *** 13 Questions</string>
    <string name="part2B">1800s \n*** \n Thời Kỳ 1800 \n*** \n7 Questions</string>
    <string name="part2B1">1800s </string>
    <string name="part2B1VN">Thời Kỳ 1800 *** 7 Questions</string>
    <string name="part2C">Recent American History and Other Important Historical Information \n*** \n Lịch Sử Cận Đại Hoa Kỳ và Các Thông Tin Lịch Sử Quan Trọng Khác \n*** \n10 Questions</string>
    <string name="part2C1">Recent American History and Other Important Historical Information</string>
    <string name="part2C1VN">Lịch Sử Cận Đại Hoa Kỳ và Các Thông Tin Lịch Sử Quan Trọng Khác \n10 Questions</string>
    <string name="titlePart3">INTEGRATED CIVICS \nTỔNG HỢP VỀ KIẾN THỨC CÔNG DÂN</string>
    <string name="part3A">Geography \n*** \nĐịa lý \n*** \n8 Questions</string>
    <string name="part3A1">Geography</string>
    <string name="part3A1VN">Địa lý *** 8 Questions</string>
    <string name="part3B">Symbols \n*** \nCác Biểu Tượng \n*** \n3 Questions</string>
    <string name="part3B1">Symbols</string>
    <string name="part3B1VN">Các Biểu Tượng *** 3 Questions</string>
    <string name="part3C">Holidays \n*** \nCác Ngày Lễ \n*** \n2 Questions</string>
    <string name="part3C1">Holidays</string>
    <string name="part3C1VN">Các Ngày Lễ *** 2 Questions</string>
    <string name="empty"></string>
    <string name="question_1">What is the supreme law of the land ?</string>
    <string name="answer_1">▪ the Constitution</string>
    <string name="question_2">What does the Constitution do ?</string>
    <string name="answer_2">▪ sets up the government
                            \n▪ defines the government
                            \n▪ protects basic rights of Americans</string>
    <string name="question_3">The idea of self-government is in the first three words of the Constitution. What are these words ?</string>
    <string name="answer_3">▪ We the People</string>
    <string name="question_4">What is an amendment ?</string>
    <string name="answer_4">▪ a change (to the Constitution)
                            \n▪ an addition (to the Constitution)</string>
    <string name="question_5">What do we call the first ten amendments to the Constitution ?</string>
    <string name="answer_5">▪ The Bill of Rights</string>
    <string name="question_6">What is one right or freedom from the First Amendment ? </string>
    <string name="answer_6">▪ speech
                         \n▪ religion
                         \n▪ assembly
                         \n▪ press
                         \n▪ petition the government</string>
    <string name="question_7">How many amendments does the Constitution have ?</string>
    <string name="answer_7">▪ twenty-seven (27)</string>
    <string name="question_8">What did the Declaration of Independence do ?</string>
    <string name="answer_8">▪ announced our independence (from Great Britain)
                          \n▪ declared our independence (from Great Britain)
                          \n▪ said that the United States is free (from Great Britain)</string>
    <string name="question_9">What are two rights in the Declaration of Independence ?</string>
    <string name="answer_9">▪ life
                         \n▪ liberty
                         \n▪ pursuit of happiness</string>
    <string name="question_10">What is freedom of religion ?</string>
    <string name="answer_10">▪ You can practice any religion, or not practice a religion.</string>
    <string name="question_11">What is the economic system in the United States ?</string>
    <string name="answer_11">▪ capitalist economy
                          \n▪ market economy</string>
    <string name="question_12">What is the “rule of law” ?</string>
    <string name="answer_12">▪ Everyone must follow the law.
                          \n▪ Leaders must obey the law.
                          \n▪ Government must obey the law.
                          \n▪ No one is above the law</string>
    <string name="question_13">Name one branch or part of the government ?</string>
    <string name="answer_13">  ▪ Congress
                            \n▪ legislative
                            \n▪ President
                            \n▪ executive
                            \n▪ the courts
                            \n▪ judicial</string>
    <string name="question_14">What stops one branch of government from becoming too powerful ?</string>
    <string name="answer_14">▪ checks and balances
                           \n▪ separation of powers</string>
    <string name="question_15">Who is in charge of the executive branch ?</string>
    <string name="answer_15">▪ the President</string>
    <string name="question_16">Who makes federal laws?</string>
    <string name="answer_16">▪ Congress \n▪ Senate and House (of Representatives) \n▪ (U.S. or national) legislature</string>
    <string name="question_17">What are the two parts of the U.S. Congress?*</string>
    <string name="answer_17">▪ the Senate and House (of Representatives)</string>
    <string name="question_18">How many U.S. Senators are there?</string>
    <string name="answer_18">▪ one hundred (100)</string>
    <string name="question_19">We elect a U.S. Senator for how many years? </string>
    <string name="answer_19">▪ six (6)</string>
    <string name="question_20">Who is one of your state’s U.S. Senators now?*</string>
    <string name="answer_20">▪ Answers will vary. [District of Columbia residents and residents of U.S. territories should answer that D.C.
(or the territory where the applicant lives) has no U.S. Senators.]</string>
    <string name="question_21">The House of Representatives has how many voting members? </string>
    <string name="answer_21">▪ four hundred thirty-five (435)</string>
    <string name="question_22">We elect a U.S. Representative for how many years?</string>
    <string name="answer_22">▪ two (2)</string>
    <string name="question_23">Name your U.S. Representative.</string>
    <string name="answer_23">▪ Answers will vary. [Residents of territories with nonvoting Delegates or Resident Commissioners may
provide the name of that Delegate or Commissioner. Also acceptable is any statement that the territory has
no (voting) Representatives in Congress.]</string>
    <string name="question_24">Who does a U.S. Senator represent?</string>
    <string name="answer_24">▪ all people of the state</string>
    <string name="question_25">Why do some states have more Representatives than other states?</string>
    <string name="answer_25">▪ (because of) the state’s population
                          \n▪ (because) they have more people
                          \n▪ (because) some states have more people</string>
    <string name="question_26">We elect a President for how many years?</string>
    <string name="answer_26">▪ four (4)</string>
    <string name="question_27">In what month do we vote for President?*</string>
    <string name="answer_27">▪ November</string>
    <string name="question_28">What is the name of the President of the United States now?*</string>
    <string name="answer_28">▪ Visit uscis.gov/citizenship/testupdates for the name of the President of the United States.</string>
    <string name="question_29">What is the name of the Vice President of the United States now?</string>
    <string name="answer_29">▪ Visit uscis.gov/citizenship/testupdates for the name of the Vice President of the United States.</string>
    <string name="question_30">If the President can no longer serve, who becomes President?</string>
    <string name="answer_30">▪ the Vice President</string>
    <string name="question_31">If both the President and the Vice President can no longer serve, who becomes President?</string>
    <string name="answer_31">▪ the Speaker of the House</string>
    <string name="question_32">Who is the Commander in Chief of the military?</string>
    <string name="answer_32">▪ the President</string>
    <string name="question_33">Who signs bills to become laws?</string>
    <string name="answer_33">▪ the President</string>
    <string name="question_34">Who vetoes bills?</string>
    <string name="answer_34">▪ the President</string>
    <string name="question_35">What does the President’s Cabinet do?</string>
    <string name="answer_35">▪ advises the President</string>
    <string name="question_36">What are two Cabinet-level positions?</string>
    <string name="answer_36">
  ▪ Secretary of Agriculture
\n▪ Secretary of Commerce
\n▪ Secretary of Defense
\n▪ Secretary of Education
\n▪ Secretary of Energy
\n▪ Secretary of Health and Human Services
\n▪ Secretary of Homeland Security
\n▪ Secretary of Housing and Urban Development
\n▪ Secretary of the Interior
\n▪ Secretary of Labor
\n▪ Secretary of State
\n▪ Secretary of Transportation
\n▪ Secretary of the Treasury
\n▪ Secretary of Veterans Affairs
\n▪ Attorney General
\n▪ Vice President</string>
    <string name="question_37">What does the judicial branch do?</string>
    <string name="answer_37">▪ reviews laws
\n▪ explains laws
\n▪ resolves disputes (disagreements)
\n▪ decides if a law goes against the Constitution</string>
    <string name="question_38">What is the highest court in the United States?</string>
    <string name="answer_38">▪ the Supreme Court</string>
    <string name="question_39">How many justices are on the Supreme Court?</string>
    <string name="answer_39">▪ Visit uscis.gov/citizenship/testupdates for the number of justices on the Supreme Court.</string>
    <string name="question_40">Who is the Chief Justice of the United States now?</string>
    <string name="answer_40">▪ Visit uscis.gov/citizenship/testupdates for the name of the Chief Justice of the United States</string>
    <string name="question_41">Under our Constitution, some powers belong to the federal government. What is one power of the federal
government?</string>
    <string name="answer_41">▪ to print money
\n▪ to declare war
\n▪ to create an army
\n▪ to make treaties</string>
    <string name="question_42">Under our Constitution, some powers belong to the states. What is one power of the states? </string>
    <string name="answer_42">▪ provide schooling and education
\n▪ provide protection (police)
\n▪ provide safety (fire departments)
\n▪ give a driver’s license
\n▪ approve zoning and land use</string>
    <string name="question_43">Who is the Governor of your state now?</string>
    <string name="answer_43"> Answers will vary. [District of Columbia residents should answer that D.C. does not have a Governor.]</string>
    <string name="us_citizens_questions">US Citizent Questions</string>
    <string name="total_100_questions">Total 100 Questions</string>
</resources>