<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trans"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/firstLinear"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="@color/background"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/us_citizens_questions"
                android:textSize="25sp"
                android:textColor="@color/light_purple"
                android:layout_marginStart="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_100_questions"
                android:textColor="@color/desire"
                android:textSize="15sp"
                android:layout_marginStart="20sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="250dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="90dp"
                android:orientation="horizontal"
                android:padding="3dp">
                    <TextView
                        android:layout_width="291dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/titlePart1"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

            </LinearLayout>

               <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/part_one"
                android:orientation="horizontal"
                   android:layout_marginTop="10dp"
                android:padding="3dp">

                   <LinearLayout
                       android:layout_width="320dp"
                       android:layout_height="110dp"
                       android:orientation="vertical">

                       <Button
                           android:id="@+id/part1aBtn"
                           android:layout_width="291dp"
                           android:layout_height="98dp"
                           android:layout_marginStart="15dp"
                           android:layout_marginTop="10dp"
                           android:background="@android:color/transparent"
                           android:text="@string/part1A"
                           android:textAlignment="center"
                           android:textColor="@color/title"
                           android:textSize="12sp" />
                   </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/part_one"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/part1bBtn"
                        android:layout_width="284dp"
                        android:layout_height="92dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:text="@string/part1B"
                        android:textAlignment="center"
                        android:textColor="@color/title"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/part_one"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/part1cBtn"
                        android:layout_width="284dp"
                        android:layout_height="92dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:text="@string/part1C"
                        android:textAlignment="center"
                        android:textColor="@color/title"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="3dp">
                <TextView
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/titlePart2"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/part_one"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/part2aBtn"
                        android:layout_width="284dp"
                        android:layout_height="92dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:text="@string/part2A"
                        android:textAlignment="center"
                        android:textColor="@color/title"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/part_one"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/part2bBtn"
                        android:layout_width="284dp"
                        android:layout_height="92dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:text="@string/part2B"
                        android:textAlignment="center"
                        android:textColor="@color/title"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/part_one"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="120dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/part2cBtn"
                        android:layout_width="289dp"
                        android:layout_height="110dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:text="@string/part2C"
                        android:textAlignment="center"
                        android:textColor="@color/title"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="3dp">
                <TextView
                    android:layout_width="291dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/titlePart3"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/part_one"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/part3aBtn"
                        android:layout_width="284dp"
                        android:layout_height="92dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:text="@string/part3A"
                        android:textAlignment="center"
                        android:textColor="@color/title"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/part_one"
                android:orientation="horizontal"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/part3bBtn"
                        android:layout_width="284dp"
                        android:layout_height="92dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:text="@string/part3B"
                        android:textAlignment="center"
                        android:textColor="@color/title"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/part_one"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:padding="3dp">

                <LinearLayout
                    android:layout_width="320dp"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/part3cBtn"
                        android:layout_width="284dp"
                        android:layout_height="92dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"

                        android:background="@android:color/transparent"
                        android:text="@string/part3C"
                        android:textAlignment="center"
                        android:textColor="@color/title"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    </LinearLayout>

</RelativeLayout>